Finalize BAC-16, BAC-17, BAC-18
