# app/Http/Controllers/AnimalController.php
@@ -4,6 +4,7 @@ namespace App\Http\Controllers;
 
 use App\Helpers\ResponseHelper;
 use App\Models\Animal;
+use App\Models\Category;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Cache;
 
@@ -22,11 +23,11 @@ class AnimalController extends Controller
 
         if ($query != null) {
             $animals = Cache::remember("animals_$query", 3600, function() use ($query) {
-                return Animal::where('name', 'like', "%$query%")->get(['id', 'name']);
+                return Animal::with('category')->where('name', 'like', "%$query%")->get();
             });
         } else {
             $animals = Cache::remember('animals', 3600, function() {
-                return Animal::all(['id', 'name']);
+                return Animal::with('category')->get();
             });
         }
 
@@ -34,6 +35,28 @@ class AnimalController extends Controller
             "Successfully get animals",
             200,
             ['animals' => $animals]
+        );
+    }
+
+    public function getAllCategories(Request $request)
+    {
+        $categories = null;
+        $query = $request->get('query');
+
+        if ($query != null) {
+            $categories = Cache::remember("categories_$query", 3600, function() use ($query) {
+                return Category::where('name', 'like', "%$query%")->get();
+            });
+        } else {
+            $categories = Cache::remember('categories', 3600, function() {
+                return Category::all();
+            });
+        }
+
+        return ResponseHelper::response(
+            "Successfully get categories",
+            200,
+            ['categories' => $categories]
         );
     }
 
@@ -46,15 +69,21 @@ class AnimalController extends Controller
     public function store(Request $request)
     {
         $request->validate([
-            'name' => 'required|unique:App\Models\Animal,name'
+            'name' => 'required|unique:App\Models\Animal,name',
+            'category' => 'required'
         ]);
 
+        $category = Category::firstOrCreate(['name' => $request->category])->id;
+
         $animal = new Animal([
-            'name' => $request->name
+            'name' => $request->name,
+            'category_id' => $category,
+            'scientific_name' => $request->scientific_name
         ]);
 
         if ($animal->save()) {
-            Cache::put('animals', Animal::all(['id', 'name']));
+            Cache::put('animals', Animal::with('category')->get());
+            $animal->load('category');
 
             return ResponseHelper::response(
                 "Successfully add new animal",
